# Python-List-in-C

./: .gitignore  CMakeLists.txt
include/: color.h  lista.h  nodo.h  tupla.h  type.h  utils.h
src/: lista.c  main.c  nodo.c  tupla.c  type.c  utils.c
