cmake_minimum_required(VERSION 3.10)
project(Function_C)

set(TARGET ${PROJECT_NAME})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)


set( SOURCE_PATH "${PROJECT_SOURCE_DIR}/src" )
set( INCLUDE_PATH "${PROJECT_SOURCE_DIR}/include" )

file( GLOB_RECURSE HPPS "${INCLUDE_PATH}/*.h" )
file( GLOB_RECURSE CPPS "${SOURCE_PATH}/*.c" )

add_executable(${TARGET} ${CPPS} ${HPPS})

target_include_directories(${TARGET} PUBLIC ${INCLUDE_PATH})

install(
	TARGETS ${TARGET}
	PERMISSIONS
    OWNER_EXECUTE OWNER_WRITE OWNER_READ
    GROUP_EXECUTE GROUP_WRITE GROUP_READ
    WORLD_EXECUTE WORLD_WRITE WORLD_READ
	RUNTIME DESTINATION
)